## Process this file with automake to produce Makefile.in

AM_CPPFLAGS = \
        -DISO_CODES_LOCATION=\"$(ISO_CODES_LOCATION)\"		\
        -DISO_CODES_LOCALEDIR=\"$(ISO_CODES_LOCALEDIR)\"	\
	-DG_LOG_DOMAIN=\"Picman-Widgets\"

INCLUDES = \
	-I$(top_builddir)	\
	-I$(top_srcdir)		\
	-I$(top_builddir)/app	\
	-I$(top_srcdir)/app	\
	$(GEGL_CFLAGS)		\
	$(GTK_CFLAGS)		\
	-I$(includedir)

noinst_LIBRARIES = libappwidgets.a

libappwidgets_a_sources = \
	widgets-enums.h			\
	widgets-types.h			\
	picmanaction.c			\
	picmanaction.h			\
	picmanactioneditor.c		\
	picmanactioneditor.h		\
	picmanactionfactory.c		\
	picmanactionfactory.h		\
	picmanactiongroup.c		\
	picmanactiongroup.h		\
	picmanactionview.c		\
	picmanactionview.h		\
	picmanblobeditor.c		\
	picmanblobeditor.h		\
	picmanbrusheditor.c		\
	picmanbrusheditor.h		\
	picmanbrushfactoryview.c		\
	picmanbrushfactoryview.h		\
	picmanbrushselect.c		\
	picmanbrushselect.h		\
	picmanbufferview.c		\
	picmanbufferview.h		\
	picmancairo-wilber.c		\
	picmancairo-wilber.h		\
	picmancellrendererdashes.c	\
	picmancellrendererdashes.h	\
	picmancellrendererviewable.c	\
	picmancellrendererviewable.h	\
	picmanchanneltreeview.c		\
	picmanchanneltreeview.h		\
	picmanclipboard.c			\
	picmanclipboard.h			\
	picmancolorbar.c			\
	picmancolorbar.h			\
	picmancolordialog.c		\
	picmancolordialog.h		\
	picmancolordisplayeditor.c	\
	picmancolordisplayeditor.h	\
	picmancoloreditor.c		\
	picmancoloreditor.h		\
	picmancolorframe.c		\
	picmancolorframe.h		\
	picmancolormapeditor.c		\
	picmancolormapeditor.h		\
	picmancolorpanel.c		\
	picmancolorpanel.h		\
	picmancolorselectorpalette.c	\
	picmancolorselectorpalette.h	\
	picmancombotagentry.c		\
	picmancombotagentry.h		\
	picmancomponenteditor.c		\
	picmancomponenteditor.h		\
	picmancontainerbox.c		\
	picmancontainerbox.h		\
	picmancontainercombobox.c		\
	picmancontainercombobox.h		\
	picmancontainereditor.c		\
	picmancontainereditor.h		\
	picmancontainerentry.c		\
	picmancontainerentry.h		\
	picmancontainergridview.c		\
	picmancontainergridview.h		\
	picmancontainericonview.c		\
	picmancontainericonview.h		\
	picmancontainerpopup.c		\
	picmancontainerpopup.h		\
	picmancontainertreestore.c	\
	picmancontainertreestore.h	\
	picmancontainertreeview.c		\
	picmancontainertreeview.h		\
	picmancontainertreeview-dnd.c	\
	picmancontainertreeview-dnd.h	\
	picmancontainertreeview-private.h	\
	picmancontainerview.c		\
	picmancontainerview.h		\
	picmancontainerview-utils.c	\
	picmancontainerview-utils.h	\
	picmancontrollereditor.c		\
	picmancontrollereditor.h		\
	picmancontrollerinfo.c		\
	picmancontrollerinfo.h		\
	picmancontrollerlist.c		\
	picmancontrollerlist.h		\
	picmancontrollers.c		\
	picmancontrollers.h		\
	picmancontrollerkeyboard.c	\
	picmancontrollerkeyboard.h	\
	picmancontrollermouse.c		\
	picmancontrollermouse.h		\
	picmancontrollerwheel.c		\
	picmancontrollerwheel.h		\
	picmancursor.c			\
	picmancursor.h			\
	picmancurveview.c			\
	picmancurveview.h			\
	picmandasheditor.c		\
	picmandasheditor.h		\
	picmandataeditor.c		\
	picmandataeditor.h		\
	picmandatafactoryview.c		\
	picmandatafactoryview.h		\
	picmandeviceeditor.c		\
	picmandeviceeditor.h		\
	picmandeviceinfo.c		\
	picmandeviceinfo.h		\
	picmandeviceinfo-coords.c		\
	picmandeviceinfo-coords.h		\
	picmandeviceinfoeditor.c		\
	picmandeviceinfoeditor.h		\
	picmandevicemanager.c		\
	picmandevicemanager.h		\
	picmandevices.c			\
	picmandevices.h			\
	picmandevicestatus.c		\
	picmandevicestatus.h		\
	picmandialogfactory.c		\
	picmandialogfactory.h		\
	picmandnd.c			\
	picmandnd.h			\
	picmandnd-xds.c			\
	picmandnd-xds.h			\
	picmandock.c			\
	picmandock.h			\
	picmandockcolumns.c		\
	picmandockcolumns.h		\
	picmandockable.c			\
	picmandockable.h			\
	picmandockbook.c			\
	picmandockbook.h			\
	picmandockcontainer.c		\
	picmandockcontainer.h		\
	picmandocked.c			\
	picmandocked.h			\
	picmandockwindow.c		\
	picmandockwindow.h		\
	picmandocumentview.c		\
	picmandocumentview.h		\
	picmandrawabletreeview.c		\
	picmandrawabletreeview.h		\
	picmandynamicseditor.c		\
	picmandynamicseditor.h		\
	picmandynamicsfactoryview.c	\
	picmandynamicsfactoryview.h	\
	picmandynamicsoutputeditor.c	\
	picmandynamicsoutputeditor.h	\
	picmaneditor.c			\
	picmaneditor.h			\
	picmanenumaction.c		\
	picmanenumaction.h		\
	picmanerrorconsole.c		\
	picmanerrorconsole.h		\
	picmanerrordialog.c		\
	picmanerrordialog.h		\
	picmanfgbgeditor.c		\
	picmanfgbgeditor.h		\
	picmanfgbgview.c			\
	picmanfgbgview.h			\
	picmanfiledialog.c		\
	picmanfiledialog.h		\
	picmanfileprocview.c		\
	picmanfileprocview.h		\
	picmanfilleditor.c		\
	picmanfilleditor.h		\
	picmanfontselect.c		\
	picmanfontselect.h		\
	picmanfontview.c			\
	picmanfontview.h			\
	picmangradienteditor.c		\
	picmangradienteditor.h		\
	picmangradientselect.c		\
	picmangradientselect.h		\
	picmangrideditor.c		\
	picmangrideditor.h		\
	picmanhandlebar.c			\
	picmanhandlebar.h			\
	picmanhelp.c			\
	picmanhelp.h			\
	picmanhelp-ids.h			\
	picmanhistogrambox.c		\
	picmanhistogrambox.h		\
	picmanhistogrameditor.c		\
	picmanhistogrameditor.h		\
	picmanhistogramview.c		\
	picmanhistogramview.h		\
	picmaniconpicker.c		\
	picmaniconpicker.h		\
	picmanimagecommenteditor.c	\
	picmanimagecommenteditor.h	\
	picmanimageeditor.c		\
	picmanimageeditor.h		\
	picmanimageparasiteview.c		\
	picmanimageparasiteview.h		\
	picmanimageprofileview.c		\
	picmanimageprofileview.h		\
	picmanimagepropview.c		\
	picmanimagepropview.h		\
	picmanimageview.c			\
	picmanimageview.h			\
	picmanitemtreeview.c		\
	picmanitemtreeview.h		\
	picmanlanguagecombobox.c		\
	picmanlanguagecombobox.h		\
	picmanlanguageentry.c		\
	picmanlanguageentry.h		\
	picmanlanguagestore.c		\
	picmanlanguagestore.h		\
	picmanlanguagestore-parser.c	\
	picmanlanguagestore-parser.h	\
	picmanlayertreeview.c		\
	picmanlayertreeview.h		\
	picmanmenudock.c			\
	picmanmenudock.h			\
	picmanmenufactory.c		\
	picmanmenufactory.h		\
	picmanmessagebox.c		\
	picmanmessagebox.h		\
	picmanmessagedialog.c		\
	picmanmessagedialog.h		\
	picmannavigationview.c		\
	picmannavigationview.h		\
	picmanoverlaybox.c		\
	picmanoverlaybox.h		\
	picmanoverlaychild.c		\
	picmanoverlaychild.h		\
	picmanoverlaydialog.c		\
	picmanoverlaydialog.h		\
	picmanoverlayframe.c		\
	picmanoverlayframe.h		\
	picmanpaletteeditor.c		\
	picmanpaletteeditor.h		\
	picmanpaletteselect.c		\
	picmanpaletteselect.h		\
	picmanpaletteview.c		\
	picmanpaletteview.h		\
	picmanpanedbox.c			\
	picmanpanedbox.h			\
	picmanpatternfactoryview.c	\
	picmanpatternfactoryview.h	\
	picmanpatternselect.c		\
	picmanpatternselect.h		\
	picmanpdbdialog.c			\
	picmanpdbdialog.h			\
	picmanpixbuf.c			\
	picmanpixbuf.h			\
	picmanpluginaction.c		\
	picmanpluginaction.h		\
	picmanprefsbox.c			\
	picmanprefsbox.h			\
	picmanprofilechooserdialog.c	\
	picmanprofilechooserdialog.h	\
	picmanprogressbox.c		\
	picmanprogressbox.h		\
	picmanprogressdialog.c		\
	picmanprogressdialog.h		\
	picmanpropwidgets.c		\
	picmanpropwidgets.h		\
	picmanradioaction.c		\
	picmanradioaction.h		\
	picmanrender.c			\
	picmanrender.h			\
	picmansamplepointeditor.c		\
	picmansamplepointeditor.h		\
	picmanscalebutton.c		\
	picmanscalebutton.h		\
	picmanselectiondata.c		\
	picmanselectiondata.h		\
	picmanselectioneditor.c		\
	picmanselectioneditor.h		\
	picmansessioninfo.c		\
	picmansessioninfo.h		\
	picmansessioninfo-aux.c		\
	picmansessioninfo-aux.h		\
	picmansessioninfo-book.c		\
	picmansessioninfo-book.h		\
	picmansessioninfo-dock.c		\
	picmansessioninfo-dock.h		\
	picmansessioninfo-dockable.c	\
	picmansessioninfo-dockable.h	\
	picmansessioninfo-private.h	\
	picmansessionmanaged.c		\
	picmansessionmanaged.h		\
	picmansettingsbox.c		\
	picmansettingsbox.h		\
	picmansettingseditor.c		\
	picmansettingseditor.h		\
	picmansizebox.c			\
	picmansizebox.h			\
	picmanspinscale.c			\
	picmanspinscale.h			\
	picmanstringaction.c		\
	picmanstringaction.h		\
	picmanstrokeeditor.c		\
	picmanstrokeeditor.h		\
	picmantagentry.c			\
	picmantagentry.h			\
	picmantagpopup.c			\
	picmantagpopup.h			\
	picmantemplateeditor.c		\
	picmantemplateeditor.h		\
	picmantemplateview.c		\
	picmantemplateview.h		\
	picmantextbuffer.c		\
	picmantextbuffer.h		\
	picmantextbuffer-serialize.c	\
	picmantextbuffer-serialize.h	\
	picmantexteditor.c		\
	picmantexteditor.h		\
	picmantextproxy.c			\
	picmantextproxy.h			\
	picmantextstyleeditor.c		\
	picmantextstyleeditor.h		\
	picmantexttag.c			\
	picmantexttag.h			\
	picmanthumbbox.c			\
	picmanthumbbox.h			\
	picmantoggleaction.c		\
	picmantoggleaction.h		\
	picmantoolbox.c			\
	picmantoolbox.h			\
	picmantoolbox-color-area.c	\
	picmantoolbox-color-area.h	\
	picmantoolbox-dnd.c		\
	picmantoolbox-dnd.h		\
	picmantoolbox-image-area.c	\
	picmantoolbox-image-area.h	\
	picmantoolbox-indicator-area.c	\
	picmantoolbox-indicator-area.h	\
	picmantooleditor.c		\
	picmantooleditor.h		\
	picmantooloptionseditor.c		\
	picmantooloptionseditor.h		\
	picmantoolpalette.c		\
	picmantoolpalette.h		\
	picmantoolpreseteditor.c		\
	picmantoolpreseteditor.h		\
	picmantoolpresetfactoryview.c	\
	picmantoolpresetfactoryview.h	\
	picmantranslationstore.c		\
	picmantranslationstore.h		\
	picmanuimanager.c			\
	picmanuimanager.h			\
	picmanundoeditor.c		\
	picmanundoeditor.h		\
	picmanvectorstreeview.c		\
	picmanvectorstreeview.h		\
	picmanview.c			\
	picmanview.h			\
	picmanview-popup.c		\
	picmanview-popup.h		\
	picmanviewablebox.c		\
	picmanviewablebox.h		\
	picmanviewablebutton.c		\
	picmanviewablebutton.h		\
	picmanviewabledialog.c		\
	picmanviewabledialog.h		\
	picmanviewrenderer.c		\
	picmanviewrenderer.h		\
	picmanviewrenderer-frame.c	\
	picmanviewrenderer-frame.h	\
	picmanviewrenderer-utils.c	\
	picmanviewrenderer-utils.h	\
	picmanviewrendererbrush.c		\
	picmanviewrendererbrush.h		\
	picmanviewrendererbuffer.c	\
	picmanviewrendererbuffer.h	\
	picmanviewrendererdrawable.c	\
	picmanviewrendererdrawable.h	\
	picmanviewrenderergradient.c	\
	picmanviewrenderergradient.h	\
	picmanviewrendererimage.c 	\
	picmanviewrendererimage.h 	\
	picmanviewrendererimagefile.c	\
	picmanviewrendererimagefile.h	\
	picmanviewrendererlayer.c		\
	picmanviewrendererlayer.h		\
	picmanviewrendererpalette.c	\
	picmanviewrendererpalette.h	\
	picmanviewrenderervectors.c	\
	picmanviewrenderervectors.h	\
	picmanwidgets-constructors.c	\
	picmanwidgets-constructors.h	\
	picmanwidgets-utils.c		\
	picmanwidgets-utils.h		\
	picmanwindow.c			\
	picmanwindow.h			\
	picmanwindowstrategy.c		\
	picmanwindowstrategy.h		\
	gtkwrapbox.c			\
	gtkwrapbox.h			\
	gtkhwrapbox.c			\
	gtkhwrapbox.h

libappwidgets_a_built_sources = widgets-enums.c

libappwidgets_a_SOURCES = \
	$(libappwidgets_a_built_sources) $(libappwidgets_a_sources)


#
# rules to generate built sources
#
# setup autogeneration dependencies
gen_sources = xgen-wec
CLEANFILES = $(gen_sources)

widgets-enums.c: $(srcdir)/widgets-enums.h $(PICMAN_MKENUMS)
	$(PICMAN_MKENUMS) \
		--fhead "#include \"config.h\"\n#include <gtk/gtk.h>\n#include \"libpicmanbase/picmanbase.h\"\n#include \"widgets-enums.h\"\n#include \"picman-intl.h\"" \
		--fprod "\n/* enumerations from \"@filename@\" */" \
		--vhead "GType\n@enum_name@_get_type (void)\n{\n  static const G@Type@Value values[] =\n  {" \
		--vprod "    { @VALUENAME@, \"@VALUENAME@\", \"@valuenick@\" }," \
		--vtail "    { 0, NULL, NULL }\n  };\n" \
		--dhead "  static const Picman@Type@Desc descs[] =\n  {" \
		--dprod "    { @VALUENAME@, @valuedesc@, @valuehelp@ }," \
		--dtail "    { 0, NULL, NULL }\n  };\n\n  static GType type = 0;\n\n  if (G_UNLIKELY (! type))\n    {\n      type = g_@type@_register_static (\"@EnumName@\", values);\n      picman_type_set_translation_context (type, \"@enumnick@\");\n      picman_@type@_set_value_descriptions (type, descs);\n    }\n\n  return type;\n}\n" \
		$(srcdir)/widgets-enums.h > xgen-wec \
	&& cp xgen-wec $(@F) \
	&& rm -f xgen-wec
