## Makefile.am for picman/data/dynamics

SUBDIRS = \
	Basic \
	FX

dynamicsdatadir = $(picmandatadir)/dynamics

dynamicsdata_DATA = \
	Basic-Dynamics.gdyn		\
	Color-From-Gradient.gdyn \
	Dynamics-Off.gdyn		\
	Fade-Tapering.gdyn		\
	Random-Color.gdyn		\
	Tilt-Angle.gdyn			\
	Track-Direction.gdyn		\
	Velocity-Tapering.gdyn

EXTRA_DIST = $(dynamicsdata_DATA)
